Tikiwiki Changelog
------------------
$Header: /cvsroot/tikiwiki/tiki/changelog.txt,v 1.109 2003-09-24 18:16:26 lrargerich Exp $

All developers are invited to add relevant changes in that file as they
apply them to the CVS source. You can optionnaly indicate an identifer
for the origin of the change (author, submitter, anyone involved) but
it's not so useful as the cvs log knows who adds what when.

Use the following tags to distinguish changes :
* [NEW] apply to something new added in tikiwiki
* [MOD] is an enhancement, not really new but make things come easier
* [FIX] can be used for bug fixes of any sort

Please wrap your lines to 80 characters and indent them with spaces only.
------------------

Version 1.8 --
<http://tikiwiki.org/ReleaseProcess18>

* [NEW] Wiki pages can be cached or not cached individually, this setting overrides
  the global setting for caching wiki pages. (Allows to have all pages cached but
  one or no pages cached but some, refresh times can differ too)
* [NEW] Events added, now articles can be normal articles, reviews or events
* [FIX] article topics no longer require an image file to be uploaded
* [MOD] tiki-list_articles now accepts type and topic parms to filter articles
* [NEW] Added a Jabber plugin {JABBER()}
* [NEW] Basic error handling in function "query" in lib/tikilib.php
* [NEW] assign page permissions to whole structures 
* [NEW] added an optional &highlight=word+otherword to highlight some words in any page
* [NEW] admin topics now allows existing topics to be changed
* [FIX] fixed galaxia bugs while porting to adodb queries
* [NEW] added a module to switch themes 
* [FIX] moved wiki table parse code behind link parse code
* [NEW] function targetBlank in tiki-js.lib
* [MOD] CODE plugin now accepts php syntax highlighting {CODE(colors=>php)}
* [NEW] Replace PEAR::DB with ADOdb to support PostgreSQL, Oracle, MSSQL, etc.
* [NEW] Added Real-time IRC (Internet Relay Chat) logging


Version 1.7.1.1 -Eta Carinae-